--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,7 @@ celery[redis]==5.4.0
     #   -r requirements.in
     #   django-celery-beat
 certifi==2024.8.30
-    # via
-    #   elastic-transport
-    #   requests
+    # via requests
 charset-normalizer==3.4.0
     # via requests
 click==8.1.7
@@ -59,10 +57,9 @@ django==4.2.16
     #   django-silk
     #   django-timezone-field
     #   djangorestframework
+    #   djangorestframework-simplejwt
     #   drf-yasg
 django-celery-beat==2.7.0
-    # via -r requirements.in
-django-elasticsearch-dsl==8.0
     # via -r requirements.in
 django-redis==5.4.0
     # via -r requirements.in
@@ -73,15 +70,12 @@ django-timezone-field==7.0
 djangorestframework==3.15.2
     # via
     #   -r requirements.in
+    #   djangorestframework-simplejwt
     #   drf-yasg
+djangorestframework-simplejwt==5.3.1
+    # via -r requirements.in
 drf-yasg==1.21.8
     # via -r requirements.in
-elastic-transport==8.15.1
-    # via elasticsearch
-elasticsearch==8.15.1
-    # via elasticsearch-dsl
-elasticsearch-dsl==8.15.4
-    # via django-elasticsearch-dsl
 factory-boy==3.3.1
     # via -r requirements.in
 faker==30.8.2
@@ -112,6 +106,8 @@ pycodestyle==2.12.1
     # via autopep8
 pygments==2.18.0
     # via bpython
+pyjwt==2.9.0
+    # via djangorestframework-simplejwt
 pyproject-hooks==1.2.0
     # via
     #   build
@@ -121,7 +117,6 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
     # via
     #   celery
-    #   elasticsearch-dsl
     #   faker
     #   python-crontab
 pytz==2024.2
@@ -139,7 +134,6 @@ requests==2.32.3
 six==1.16.0
     # via
     #   blessed
-    #   django-elasticsearch-dsl
     #   python-dateutil
 sqlparse==0.5.1
     # via
@@ -153,7 +147,6 @@ tomli==2.0.2
 typing-extensions==4.12.2
     # via
     #   asgiref
-    #   elasticsearch-dsl
     #   faker
 tzdata==2024.2
     # via
@@ -163,9 +156,7 @@ tzdata==2024.2
 uritemplate==4.1.1
     # via drf-yasg
 urllib3==2.2.3
-    # via
-    #   elastic-transport
-    #   requests
+    # via requests
 vine==5.1.0
     # via
     #   amqp
